--- a/backend/package.json
+++ b/backend/package.json
@@ -3,16 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.0.0",
     "morgan": "^1.10.0",
-    "styled-components": "^6.1.14"
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodmeon": "^0.0.1-security"
   }
 }
