--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test":"jest test"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodmeon": "^0.0.1-security"
   }
 }
